# tobyworld-lore-guardian

./: .env  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  HOWTO.md  LICENSE  Makefile  PLAN_V3.md  README.md  dev-requirements.txt  pyproject.toml  requirements.txt  run.sh
.github/workflows/: ci.yml
scripts/: build_faiss_index.py  build_index.py  index_scrolls.py  run_local.sh
scripts/scripts/: mirror_fallback_patch.sh
scrolls/E4/2025-09-07/: TOBY_L2XX_VaultThatRemembers.md
src/: tobyworld.zip-backup-09032025
src/tobyworld/: __init__.py  __main__.py  db.py
src/tobyworld/agentic_rag/: __init__.py  _smoke.py  base.py  learning.py  multi_arc_retrieval.py  pipeline.py  reasoning_agent.py  rerankers.py  synthesis_agent.py  synthesis_agent.py.old
src/tobyworld/agents/: __init__.py  agent_switcher.py
src/tobyworld/api/: app_ui.py  server.py  server.py.bak  status_ui.py
src/tobyworld/core/: config.py  guard.py  guiding.py  ledger.py  mirror.py
src/tobyworld/knowledge/: canonical.py
src/tobyworld/mirror/: __init__.py  cadence_guard.py  mirror_renderer.py  sanitize.py  symbol_router.py
src/tobyworld/retrieval/: multi_arc_retrieval.py  pluggable.py  recovery.py  retriever.py
src/tobyworld/traits/: lucidity.py  resonance.py
src/tobyworld/utils/: __init__.py  scroll_loader.py  simple_llm.py  simple_llm.py.bak.1756754771
src/tobyworld_lore_guardian.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  mirror_train_20250901_202433.jsonl  reload.sh  test_api_smoke.py  test_mirror_full.sh  test_mirror_ql90_104.sh
(+3 files in other folders)
