[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tobyworld-lore-guardian"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["fastapi>=0.112","uvicorn[standard]>=0.30","pydantic-settings>=2.4"]

[tool.setuptools.packages.find]
where = ["src"]
